website/websites/u64q/code/revcomp.3.jython.log

Tue, 26 May 2015 13:08:46 GMT

COMMAND LINE:
/usr/bin/jython revcomp.jython-3.jython 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "revcomp.jython-3.jython", line 25
    print(line, end='')
                  ^
SyntaxError: no viable alternative at input '='
